<resources>
    <string name="app_name">RestJson2</string>
    <string name="coupon_store">coupon_store</string>
    <string name="coupon_text">coupon_text</string>
    <string name="coupon_expire_msg">coupon_expire_msg</string>
    <string name="coupon_expire_date">coupon_expire_date</string>
    <string name="coupon_code">coupon_code</string>
    <string name="coupon_category_msg">coupon_category_msg</string>
    <string name="coupon_category">coupon_category</string>
    <string name="person_name">person_name</string>
    <string name="person_address">person_address</string>
    <string name="person_email">person_email</string>
    <string name="person_age">person_age</string>
    <string name="person_eye_color">person_eye_color</string>
    <string name="person_phone">person_phone</string>
    <string name="person_company">person_company</string>
    <string name="id_number">id_number</string>
</resources>
