<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardBackgroundColor="#81c784"
    app:cardCornerRadius="12dp"
    app:cardElevation="3dp"
    app:contentPadding="4dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:clickable="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/person_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:text="@string/person_name"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/person_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/person_name"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/person_address"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/person_email"
            android:layout_width="wrap_content"
            android:layout_height="26dp"
            android:layout_below="@id/person_address"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/person_email"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/person_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/person_address"
            android:layout_alignEnd="@id/person_address"
            android:layout_marginStart="226dp"
            android:layout_marginTop="-34dp"
            android:layout_marginBottom="10dp"
            android:text="@string/person_age"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/person_eye_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/person_address"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/person_eye_color"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/person_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/person_eye_color"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/person_phone"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/person_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/person_eye_color"
            android:layout_alignParentEnd="true"
            android:layout_alignEnd="@id/person_phone"
            android:layout_marginStart="200dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/person_company"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            app:srcCompat="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/id_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="4dp"
            android:textSize="18sp"
            android:textColor="#E91E63"
            android:text="@string/id_number" />


    </RelativeLayout>
</androidx.cardview.widget.CardView>